Add deduplication for mails
