# core/connector-api/src/main/kotlin/io/mailit/core/external/api/MailMessageService.kt
@@ -14,4 +14,5 @@ data class CreateMailCommand(
     val emailFrom: String?,
     val emailTo: String,
     val mailType: String,
+    val deduplicationId: String,
 )
